added embed of youtube.com demo video

--- a/nr/templates/home.html
+++ b/nr/templates/home.html
@@ -27,18 +27,14 @@
 </div>
 <div class="grid_24">
 <div class="grid_12 leftlowerbox alpha">
-	<h2>{% trans 'Why I did this?' %}</h2>
+	<h2>{% trans 'Download the code for this site from GitHub.com' %}</h2>
     <ul>
-    <li>{% trans 'I wanted to understand how long it would take and what would be involved in getting a basic national registry website up and running. Turns out a minimal implementation is fast and simple.' %}</li>
+    <li>{% trans 'The code is available here:' %} <a href="https://github.com/shafiquejamal/socialassistanceregistry">https://github.com/shafiquejamal/socialassistanceregistry</a></li>
     </ul>
 </div>
-<div class="grid_12 omega">
-</div>
-<div class="grid_12 rightlowerbox alpha">
-    <h2>{% trans 'Please give me some feedback.' %}</h2>
-    <ul>
-    <li>{% trans 'Please send comments, questions, etc. to shafique.jamal@gmail.com' %}</li>
-    </ul>
+<div class="grid_12 rightlowerbox omega">
+    <h2>{% trans 'Watch a video demo' %}</h2>
+    <iframe width="560" height="315" src="http://www.youtube.com/embed/cou0e1HkKhI" frameborder="0" allowfullscreen></iframe>
 </div>	
 </div>
 {% if not user.is_authenticated %}
