--- a/nr/templates/base.html
+++ b/nr/templates/base.html
@@ -21,7 +21,7 @@
         <h1>Socialassistanceregistry.com</h1>
         <h2>{% trans 'Application intake software' %}</h2>
         <h3>{% trans '(for social assistance programs, but could be used for other programs)' %}</h3>
-        <p class="fineprint">* {% trans 'contact shafique.jamal@gmail.com for the code' %}</p>
+        <p class="fineprint">{% trans 'download the code:' %}<a href="https://github.com/shafiquejamal/socialassistanceregistry.git">https://github.com/shafiquejamal/socialassistanceregistry.git</a></p>
       </div>
       <div class="grid_12">
         <div id="loginbox" class="grid_14">
