--- a/nr/applicants/templates/applicants/index.html
+++ b/nr/applicants/templates/applicants/index.html
@@ -3,7 +3,7 @@
 {% load url from future %}
 {% load humanize %}
 
-{% block content_title %}<h1>{% trans 'My Packages' %}</h1>{% endblock %}
+{% block content_title %}<h1>{% trans 'Applicants' %}</h1>{% endblock %}
 
 {% block content %}
 {% if applicant_list %}
