Changed some text on the home page

--- a/nr/templates/home.html
+++ b/nr/templates/home.html
@@ -13,9 +13,14 @@
 		<ul>
 			<li>
 				<p class="text-left">
-					{% trans 'This website is a demonstration website for the free, open-source Social Assistance Registry project. The registry software is useful for social assistance reform projects, which typically require basic application intake software to support electronic intake of social assistance applications. The source code for this site is available here (link to the github.com repository)' %}
+					{% trans 'This website is a demonstration website for the free, open-source Social Assistance Registry project. This registry software is useful for social assistance reform projects, which typically require basic application intake software to support electronic intake of social assistance applications.' %} 
 				</p>
 			</li>
+            <li>
+                <p>
+                    {% trans 'The source code and installation instructions for this site are available <a href="https://github.com/shafiquejamal/socialassistanceregistry">here.</a>' %}
+                </p>
+            </li>
 			<li>
 				<p class="text-left">
 					{% trans 'Please see the screenshots below and watch the YouTube video below to see how one might use this software.' %}
@@ -62,7 +67,7 @@
 		<h4><p class="text-center">{% trans 'How it Works' %}</p></h4>
 		<ul>
 			<li>
-				<p class="text-left">{% trans 'This is a demo of a national registry, which could be for social protection or programs. If you would like to have the code, please email me: shafique.jamal@gmail.com. I hope to one day put all the code on Github.com' %}
+				<p class="text-left">{% trans 'This is a demo of a national registry, which could be for social protection or programs.' %}
 				</p>
 			</li>
 			<li>
