added widget_tweaks and add_class:span4 to create.htmt

--- a/nr/templates/home.html
+++ b/nr/templates/home.html
@@ -5,7 +5,7 @@
 {% load humanize %}
 {% load widget_tweaks %}
 
-{% block title %}<h1>{% trans 'Home' %}</h1>{% endblock %}
+{% block title %}{% trans 'Home' %}{% endblock %}
 
 {% block content %}
 <div id="about" class="pull-left">
