--- a/nr/applicants/templates/applicants/create.html
+++ b/nr/applicants/templates/applicants/create.html
@@ -2,8 +2,9 @@
 {% load i18n %}
 {% load url from future %}
 {% load humanize %}
+{% load widget_tweaks %}
 
-{% block content_title %}<h1>{% trans 'Register New Package' %}</h1>{% endblock %}
+{% block content_title %}{% trans 'Register New Package' %}{% endblock %}
 
 {% block content %}
 
@@ -15,7 +16,7 @@
 				{{ field.label_tag }}{{ field.errors }}	
 			</div>
 			<div id="applicant_r_{{ forloop.counter }}" >
-				{{ field }}
+				{{ field|add_class:"span4" }}
 			</div>
 		</div>
 	{% endfor %}
