--- a/nr/applicants/templates/applicants/detail.html
+++ b/nr/applicants/templates/applicants/detail.html
@@ -2,8 +2,9 @@
 {% load i18n %}
 {% load url from future %}
 {% load humanize %}
+{% load widget_tweaks %}
 
-{% block content_title %}<h1>{% trans 'My Applicant' %}</h1>{% endblock %}
+{% block content_title %}{% trans 'My Applicant' %}{% endblock %}
 
 {% block content %}
 
