--- a/nr/applicants/templates/applicants/update_applicant.html
+++ b/nr/applicants/templates/applicants/update_applicant.html
@@ -2,6 +2,7 @@
 {% load i18n %}
 {% load url from future %}
 {% load humanize %}
+{% load widget_tweaks %}
 
 {% block content_title %}<h1>{% trans 'Update Applicant' %}</h1>{% endblock %}
 
@@ -15,7 +16,7 @@
 				{{ field.label_tag }}{{ field.errors }}	
 			</div>
 			<div id="applicant_r_{{ forloop.counter }}" >
-				{{ field }}
+				{{ field|add_class:"span4"  }}
 			</div>
 		</div>
 	{% endfor %}
