--- a/nr/applicants/templates/applicants/index.html
+++ b/nr/applicants/templates/applicants/index.html
@@ -2,8 +2,9 @@
 {% load i18n %}
 {% load url from future %}
 {% load humanize %}
+{% load widget_tweaks %}
 
-{% block content_title %}<h1>{% trans 'Applicants' %}</h1>{% endblock %}
+{% block content_title %}{% trans 'Applicants' %}{% endblock %}
 
 {% block content %}
 {% if applicant_list %}
@@ -15,11 +16,11 @@
 <table class="package_list">
 	{% include "applicants/applicant_heading_snippet.html" %}
 	{% for applicant in applicant_list %}
-	{% include "applicants/applicant_detail_row_snippet.html" %}
+		{% include "applicants/applicant_detail_row_snippet.html" %}
 	{% endfor %}
 </table>
 	{% else %}
-	<p>{% trans 'No applicants.' %}</p>
+		<p>{% trans 'No applicants.' %}</p>
 	{% endif %}
 
 {% endblock %}
