--- a/nr/applicants/templates/applicants/householdmember_heading_snippet.html
+++ b/nr/applicants/templates/applicants/householdmember_heading_snippet.html
@@ -1,12 +1,13 @@
 {% load i18n %}
 {% load url from future %}
 {% load humanize %}
+{% load widget_tweaks %}
 
-<th>{% trans 'First Name' %}</th>
-<th>{% trans 'Middle Name' %}</th>
-<th>{% trans 'Last Name' %}</th>
-<th>{% trans 'National ID' %}</th>
-<th>{% trans 'Gender' %}</th>
-<th>{% trans 'Date of Birth' %}</th>
-<th>{% trans 'Rel to HH head' %}</th>
-<th>{% trans 'Disability*' %}</th>
+<th class="span4">{% trans 'First Name' %}</th>
+<th class="span4">{% trans 'Middle Name' %}</th>
+<th class="span4">{% trans 'Last Name' %}</th>
+<th class="span4">{% trans 'National ID' %}</th>
+<th class="span4">{% trans 'Gender' %}</th>
+<th class="span4">{% trans 'Date of Birth' %}</th>
+<th class="span4">{% trans 'Rel to HH head' %}</th>
+<th class="span4">{% trans 'Disability*' %}</th>
