--- a/nr/applicants/templates/applicants/applicant_detail_row_snippet.html
+++ b/nr/applicants/templates/applicants/applicant_detail_row_snippet.html
@@ -4,12 +4,12 @@
 {% load widget_tweaks %}
 <tr>
 		<td><a href="{% url 'applicants:detail' applicant.pk_masked %}">{{ applicant.pk_masked }}</a></td>
-		<td>{{ applicant.housenumber|add_class:"span4" }}</td>
-		<td>{{ applicant.address_line1|add_class:"span4"  }}</td>
-		<td>{{ applicant.postal|add_class:"span4" }}</td>
-		<td>{{ applicant.mobile_phone|add_class:"span4"  }}</td>
-		<td>{{ applicant.user|add_class:"span4" }}</td>
-		<td>{{ applicant.hhsize|add_class:"span4" }}</td>
-		<td>{{ applicant.score|add_class:"span4" }}</td>
-		<td>{{ applicant.created_at|naturaltime|add_class:"span4" }}</td>
+		<td>{{ applicant.housenumber }}</td>
+		<td>{{ applicant.address_line1 }}</td>
+		<td>{{ applicant.postal }}</td>
+		<td>{{ applicant.mobile_phone  }}</td>
+		<td>{{ applicant.user }}</td>
+		<td>{{ applicant.hhsize }}</td>
+		<td>{{ applicant.score }}</td>
+		<td>{{ applicant.created_at|naturaltime }}</td>
 	</tr>
